test/attr/ApplicationMain/attr_main_struct_from_two_protocols_one_missing.code
// RUN: %target-language-frontend -typecheck -parse-as-library -verify %s

protocol Runnable {
    init()
    fn run()
}

protocol OtherThing {
}

extension Runnable where Self : OtherThing {
    static fn main() {
        immutable it = Self.init()
        it.run()
    }
}

@main //expected-error{{'EntryPoint' is annotated with '@main' and must provide a main static function}}
struct EntryPoint : Runnable {
  fn run() {
  }
}

